--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/expression-language": "^4.1",
-        "symfony/flex": "1.16.3",
-        "symfony/form": "5.3.8",
+        "symfony/flex": "^1.6",
+        "symfony/form": "^5.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/translation": "^4.1",
         "symfony/twig-bundle": "^4.1",
@@ -24,9 +24,9 @@
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^4.1",
-        "symfony/stopwatch": "4.4.27",
+        "symfony/stopwatch": "^5.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/web-profiler-bundle": "4.4.31",
+        "symfony/web-profiler-bundle": "^5.0",
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
